파티클, GS, 뎁스스텐실 수업진행

--- a/220118_CurrentProject/DX3D/DX3D.vcxproj
+++ b/220118_CurrentProject/DX3D/DX3D.vcxproj
@@ -155,41 +155,42 @@
     <ClInclude Include="Algorithm\Node.h" />
     <ClInclude Include="DX3D.h" />
     <ClInclude Include="framework.h" />
-    <ClInclude Include="Libraries\Framework\Buffer\ConstBuffer.h" />
-    <ClInclude Include="Libraries\Framework\Buffer\GlobalBuffer.h" />
-    <ClInclude Include="Libraries\Framework\Buffer\IndexBuffer.h" />
-    <ClInclude Include="Libraries\Framework\Buffer\RowBuffer.h" />
-    <ClInclude Include="Libraries\Framework\Buffer\StructuredBuffer.h" />
-    <ClInclude Include="Libraries\Framework\Buffer\VertexBuffer.h" />
-    <ClInclude Include="Libraries\Framework\Buffer\VertexLayouts.h" />
-    <ClInclude Include="Libraries\Framework\Collision\BoxCollider.h" />
-    <ClInclude Include="Libraries\Framework\Collision\CapsuleCollider.h" />
-    <ClInclude Include="Libraries\Framework\Collision\Collider.h" />
-    <ClInclude Include="Libraries\Framework\Collision\SphereCollider.h" />
-    <ClInclude Include="Libraries\Framework\Environment\Camera.h" />
-    <ClInclude Include="Libraries\Framework\Environment\Environment.h" />
-    <ClInclude Include="Libraries\Framework\Environment\Frustum.h" />
-    <ClInclude Include="Libraries\Framework\Math\GameMath.h" />
-    <ClInclude Include="Libraries\Framework\Model\Model.h" />
-    <ClInclude Include="Libraries\Framework\Model\ModelAnimator.h" />
-    <ClInclude Include="Libraries\Framework\Model\ModelAnimatorInstancing.h" />
-    <ClInclude Include="Libraries\Framework\Model\ModelClip.h" />
-    <ClInclude Include="Libraries\Framework\Model\ModelExporter.h" />
-    <ClInclude Include="Libraries\Framework\Model\ModelInstancing.h" />
-    <ClInclude Include="Libraries\Framework\Model\ModelMesh.h" />
-    <ClInclude Include="Libraries\Framework\Model\ModelReader.h" />
-    <ClInclude Include="Libraries\Framework\Model\ModelType.h" />
-    <ClInclude Include="Libraries\Framework\Shader\ComputeShader.h" />
-    <ClInclude Include="Libraries\Framework\State\BlendState.h" />
-    <ClInclude Include="Libraries\Framework\State\DepthStacilState.h" />
-    <ClInclude Include="Libraries\Framework\Utility\Utility.h" />
+    <ClInclude Include="Framework\Buffer\ConstBuffer.h" />
+    <ClInclude Include="Framework\Buffer\GlobalBuffer.h" />
+    <ClInclude Include="Framework\Buffer\IndexBuffer.h" />
+    <ClInclude Include="Framework\Buffer\RowBuffer.h" />
+    <ClInclude Include="Framework\Buffer\StructuredBuffer.h" />
+    <ClInclude Include="Framework\Buffer\VertexBuffer.h" />
+    <ClInclude Include="Framework\Buffer\VertexLayouts.h" />
+    <ClInclude Include="Framework\Collision\BoxCollider.h" />
+    <ClInclude Include="Framework\Collision\CapsuleCollider.h" />
+    <ClInclude Include="Framework\Collision\Collider.h" />
+    <ClInclude Include="Framework\Collision\SphereCollider.h" />
+    <ClInclude Include="Framework\Environment\Camera.h" />
+    <ClInclude Include="Framework\Environment\Environment.h" />
+    <ClInclude Include="Framework\Environment\Frustum.h" />
+    <ClInclude Include="Framework\Math\GameMath.h" />
+    <ClInclude Include="Framework\Model\Model.h" />
+    <ClInclude Include="Framework\Model\ModelAnimator.h" />
+    <ClInclude Include="Framework\Model\ModelAnimatorInstancing.h" />
+    <ClInclude Include="Framework\Model\ModelClip.h" />
+    <ClInclude Include="Framework\Model\ModelExporter.h" />
+    <ClInclude Include="Framework\Model\ModelInstancing.h" />
+    <ClInclude Include="Framework\Model\ModelMesh.h" />
+    <ClInclude Include="Framework\Model\ModelReader.h" />
+    <ClInclude Include="Framework\Model\ModelType.h" />
+    <ClInclude Include="Framework\Shader\ComputeShader.h" />
+    <ClInclude Include="Framework\Shader\GeometryShader.h" />
+    <ClInclude Include="Framework\State\BlendState.h" />
+    <ClInclude Include="Framework\State\DepthStacilState.h" />
+    <ClInclude Include="Framework\Utility\Utility.h" />
     <ClInclude Include="Manager\SceneManager.h" />
-    <ClInclude Include="Libraries\Framework\Math\Transform.h" />
-    <ClInclude Include="Libraries\Framework\Math\Vector3.h" />
-    <ClInclude Include="Libraries\Framework\Render\Material.h" />
-    <ClInclude Include="Libraries\Framework\Render\Mesh.h" />
-    <ClInclude Include="Libraries\Framework\State\RasterizerState.h" />
-    <ClInclude Include="Libraries\Framework\State\SamplerState.h" />
+    <ClInclude Include="Framework\Math\Transform.h" />
+    <ClInclude Include="Framework\Math\Vector3.h" />
+    <ClInclude Include="Framework\Render\Material.h" />
+    <ClInclude Include="Framework\Render\Mesh.h" />
+    <ClInclude Include="Framework\State\RasterizerState.h" />
+    <ClInclude Include="Framework\State\SamplerState.h" />
     <ClInclude Include="Object\Basic\Cube.h" />
     <ClInclude Include="Object\Basic\Grid.h" />
     <ClInclude Include="Object\Basic\Quad.h" />
@@ -216,15 +217,15 @@
     <ClInclude Include="Object\Model\Zombie.h" />
     <ClInclude Include="Object\ReportCamera_211205.h" />
     <ClInclude Include="Object\ReportCube.h" />
-    <ClInclude Include="Libraries\Framework\Render\Texture.h" />
-    <ClInclude Include="Libraries\Framework\Shader\PixelShader.h" />
-    <ClInclude Include="Libraries\Framework\Shader\Shader.h" />
-    <ClInclude Include="Libraries\Framework\Shader\VertexShader.h" />
-    <ClInclude Include="Libraries\Framework\System\Device.h" />
-    <ClInclude Include="Libraries\Framework\Utility\BinaryReader.h" />
-    <ClInclude Include="Libraries\Framework\Utility\BinaryWriter.h" />
-    <ClInclude Include="Libraries\Framework\Utility\Font.h" />
-    <ClInclude Include="Libraries\Framework\Utility\Singleton.h" />
+    <ClInclude Include="Framework\Render\Texture.h" />
+    <ClInclude Include="Framework\Shader\PixelShader.h" />
+    <ClInclude Include="Framework\Shader\Shader.h" />
+    <ClInclude Include="Framework\Shader\VertexShader.h" />
+    <ClInclude Include="Framework\System\Device.h" />
+    <ClInclude Include="Framework\Utility\BinaryReader.h" />
+    <ClInclude Include="Framework\Utility\BinaryWriter.h" />
+    <ClInclude Include="Framework\Utility\Font.h" />
+    <ClInclude Include="Framework\Utility\Singleton.h" />
     <ClInclude Include="Object\ReportGrid.h" />
     <ClInclude Include="Object\ReportRobot_211201.h" />
     <ClInclude Include="Object\SKillBall.h" />
@@ -232,6 +233,7 @@
     <ClInclude Include="Programe\Program.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Scenes\AstarScene.h" />
+    <ClInclude Include="Scenes\BillboardScene.h" />
     <ClInclude Include="Scenes\CharacterScene.h" />
     <ClInclude Include="Scenes\CollisionScene.h" />
     <ClInclude Include="Scenes\CubeScene.h" />
@@ -261,36 +263,37 @@
     <ClCompile Include="framework.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Buffer\ConstBuffer.cpp" />
-    <ClCompile Include="Libraries\Framework\Buffer\IndexBuffer.cpp" />
-    <ClCompile Include="Libraries\Framework\Buffer\RowBuffer.cpp" />
-    <ClCompile Include="Libraries\Framework\Buffer\StructuredBuffer.cpp" />
-    <ClCompile Include="Libraries\Framework\Buffer\VertexBuffer.cpp" />
-    <ClCompile Include="Libraries\Framework\Collision\BoxCollider.cpp" />
-    <ClCompile Include="Libraries\Framework\Collision\CapsuleCollider.cpp" />
-    <ClCompile Include="Libraries\Framework\Collision\Collider.cpp" />
-    <ClCompile Include="Libraries\Framework\Collision\SphereCollider.cpp" />
-    <ClCompile Include="Libraries\Framework\Environment\Camera.cpp" />
-    <ClCompile Include="Libraries\Framework\Environment\Environment.cpp" />
-    <ClCompile Include="Libraries\Framework\Environment\Frustum.cpp" />
-    <ClCompile Include="Libraries\Framework\Math\GameMath.cpp" />
-    <ClCompile Include="Libraries\Framework\Math\Transform.cpp" />
-    <ClCompile Include="Libraries\Framework\Model\Model.cpp" />
-    <ClCompile Include="Libraries\Framework\Model\ModelAnimator.cpp" />
-    <ClCompile Include="Libraries\Framework\Model\ModelAnimatorInstancing.cpp" />
-    <ClCompile Include="Libraries\Framework\Model\ModelClip.cpp" />
-    <ClCompile Include="Libraries\Framework\Model\ModelExporter.cpp" />
-    <ClCompile Include="Libraries\Framework\Model\ModelInstancing.cpp" />
-    <ClCompile Include="Libraries\Framework\Model\ModelMesh.cpp" />
-    <ClCompile Include="Libraries\Framework\Model\ModelReader.cpp" />
-    <ClCompile Include="Libraries\Framework\Render\Material.cpp" />
-    <ClCompile Include="Libraries\Framework\Render\Mesh.cpp" />
-    <ClCompile Include="Libraries\Framework\Shader\ComputeShader.cpp" />
-    <ClCompile Include="Libraries\Framework\State\BlendState.cpp" />
-    <ClCompile Include="Libraries\Framework\State\DepthStacilState.cpp" />
-    <ClCompile Include="Libraries\Framework\State\RasterizerState.cpp" />
-    <ClCompile Include="Libraries\Framework\State\SamplerState.cpp" />
-    <ClCompile Include="Libraries\Framework\Utility\Utility.cpp" />
+    <ClCompile Include="Framework\Buffer\ConstBuffer.cpp" />
+    <ClCompile Include="Framework\Buffer\IndexBuffer.cpp" />
+    <ClCompile Include="Framework\Buffer\RowBuffer.cpp" />
+    <ClCompile Include="Framework\Buffer\StructuredBuffer.cpp" />
+    <ClCompile Include="Framework\Buffer\VertexBuffer.cpp" />
+    <ClCompile Include="Framework\Collision\BoxCollider.cpp" />
+    <ClCompile Include="Framework\Collision\CapsuleCollider.cpp" />
+    <ClCompile Include="Framework\Collision\Collider.cpp" />
+    <ClCompile Include="Framework\Collision\SphereCollider.cpp" />
+    <ClCompile Include="Framework\Environment\Camera.cpp" />
+    <ClCompile Include="Framework\Environment\Environment.cpp" />
+    <ClCompile Include="Framework\Environment\Frustum.cpp" />
+    <ClCompile Include="Framework\Math\GameMath.cpp" />
+    <ClCompile Include="Framework\Math\Transform.cpp" />
+    <ClCompile Include="Framework\Model\Model.cpp" />
+    <ClCompile Include="Framework\Model\ModelAnimator.cpp" />
+    <ClCompile Include="Framework\Model\ModelAnimatorInstancing.cpp" />
+    <ClCompile Include="Framework\Model\ModelClip.cpp" />
+    <ClCompile Include="Framework\Model\ModelExporter.cpp" />
+    <ClCompile Include="Framework\Model\ModelInstancing.cpp" />
+    <ClCompile Include="Framework\Model\ModelMesh.cpp" />
+    <ClCompile Include="Framework\Model\ModelReader.cpp" />
+    <ClCompile Include="Framework\Render\Material.cpp" />
+    <ClCompile Include="Framework\Render\Mesh.cpp" />
+    <ClCompile Include="Framework\Shader\ComputeShader.cpp" />
+    <ClCompile Include="Framework\Shader\GeometryShader.cpp" />
+    <ClCompile Include="Framework\State\BlendState.cpp" />
+    <ClCompile Include="Framework\State\DepthStacilState.cpp" />
+    <ClCompile Include="Framework\State\RasterizerState.cpp" />
+    <ClCompile Include="Framework\State\SamplerState.cpp" />
+    <ClCompile Include="Framework\Utility\Utility.cpp" />
     <ClCompile Include="Manager\SceneManager.cpp" />
     <ClCompile Include="Object\Basic\Cube.cpp" />
     <ClCompile Include="Object\Basic\Grid.cpp" />
@@ -318,20 +321,21 @@
     <ClCompile Include="Object\Model\Zombie.cpp" />
     <ClCompile Include="Object\ReportCamera_211205.cpp" />
     <ClCompile Include="Object\ReportCube.cpp" />
-    <ClCompile Include="Libraries\Framework\Render\Texture.cpp" />
-    <ClCompile Include="Libraries\Framework\Shader\PixelShader.cpp" />
-    <ClCompile Include="Libraries\Framework\Shader\Shader.cpp" />
-    <ClCompile Include="Libraries\Framework\Shader\VertexShader.cpp" />
-    <ClCompile Include="Libraries\Framework\System\Device.cpp" />
-    <ClCompile Include="Libraries\Framework\Utility\BinaryReader.cpp" />
-    <ClCompile Include="Libraries\Framework\Utility\BinaryWriter.cpp" />
-    <ClCompile Include="Libraries\Framework\Utility\Font.cpp" />
+    <ClCompile Include="Framework\Render\Texture.cpp" />
+    <ClCompile Include="Framework\Shader\PixelShader.cpp" />
+    <ClCompile Include="Framework\Shader\Shader.cpp" />
+    <ClCompile Include="Framework\Shader\VertexShader.cpp" />
+    <ClCompile Include="Framework\System\Device.cpp" />
+    <ClCompile Include="Framework\Utility\BinaryReader.cpp" />
+    <ClCompile Include="Framework\Utility\BinaryWriter.cpp" />
+    <ClCompile Include="Framework\Utility\Font.cpp" />
     <ClCompile Include="Object\ReportGrid.cpp" />
     <ClCompile Include="Object\ReportRobot_211201.cpp" />
     <ClCompile Include="Object\SKillBall.cpp" />
     <ClCompile Include="Object\UI\Bar.cpp" />
     <ClCompile Include="Programe\Program.cpp" />
     <ClCompile Include="Scenes\AstarScene.cpp" />
+    <ClCompile Include="Scenes\BillboardScene.cpp" />
     <ClCompile Include="Scenes\CharacterScene.cpp" />
     <ClCompile Include="Scenes\CollisionScene.cpp" />
     <ClCompile Include="Scenes\CubeScene.cpp" />
@@ -402,6 +406,12 @@
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Compute</ShaderType>
       <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">4.0</ShaderModel>
       <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">CS</EntryPointName>
+    </FxCompile>
+    <FxCompile Include="Shaders\Geometry\Billboard.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
     </FxCompile>
     <FxCompile Include="Shaders\Grid.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
