--- a/220118_CurrentProject/DX3D/DX3D.vcxproj.filters
+++ b/220118_CurrentProject/DX3D/DX3D.vcxproj.filters
@@ -36,49 +36,49 @@
     <ClInclude Include="Programe\Program.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\System\Device.h">
+    <ClInclude Include="Framework\System\Device.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Utility\Singleton.h">
+    <ClInclude Include="Framework\Utility\Singleton.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Shader\Shader.h">
+    <ClInclude Include="Framework\Shader\Shader.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Shader\VertexShader.h">
+    <ClInclude Include="Framework\Shader\VertexShader.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Shader\PixelShader.h">
+    <ClInclude Include="Framework\Shader\PixelShader.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Buffer\VertexLayouts.h">
+    <ClInclude Include="Framework\Buffer\VertexLayouts.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Buffer\VertexBuffer.h">
+    <ClInclude Include="Framework\Buffer\VertexBuffer.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Buffer\IndexBuffer.h">
+    <ClInclude Include="Framework\Buffer\IndexBuffer.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Buffer\ConstBuffer.h">
+    <ClInclude Include="Framework\Buffer\ConstBuffer.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Buffer\GlobalBuffer.h">
+    <ClInclude Include="Framework\Buffer\GlobalBuffer.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Object\ReportCube.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Render\Texture.h">
+    <ClInclude Include="Framework\Render\Texture.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Utility\BinaryReader.h">
+    <ClInclude Include="Framework\Utility\BinaryReader.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Utility\BinaryWriter.h">
+    <ClInclude Include="Framework\Utility\BinaryWriter.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Utility\Font.h">
+    <ClInclude Include="Framework\Utility\Font.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Scenes\CubeScene.h">
@@ -87,28 +87,28 @@
     <ClInclude Include="Object\Basic\Cube.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Render\Material.h">
+    <ClInclude Include="Framework\Render\Material.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Render\Mesh.h">
+    <ClInclude Include="Framework\Render\Mesh.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Environment\Environment.h">
+    <ClInclude Include="Framework\Environment\Environment.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Math\Vector3.h">
+    <ClInclude Include="Framework\Math\Vector3.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Math\Transform.h">
+    <ClInclude Include="Framework\Math\Transform.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Object\ReportRobot_211201.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\State\SamplerState.h">
+    <ClInclude Include="Framework\State\SamplerState.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\State\RasterizerState.h">
+    <ClInclude Include="Framework\State\RasterizerState.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Scenes\GridScene.h">
@@ -123,7 +123,7 @@
     <ClInclude Include="Object\ReportCamera_211205.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Environment\Camera.h">
+    <ClInclude Include="Framework\Environment\Camera.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Scenes\TerrainScene.h">
@@ -141,7 +141,7 @@
     <ClInclude Include="Object\Basic\Sphere.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Utility\Utility.h">
+    <ClInclude Include="Framework\Utility\Utility.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Scenes\TerrainEditorScene.h">
@@ -150,19 +150,19 @@
     <ClInclude Include="Object\Landscape\TerrainEditor.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Shader\ComputeShader.h">
+    <ClInclude Include="Framework\Shader\ComputeShader.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Buffer\RowBuffer.h">
+    <ClInclude Include="Framework\Buffer\RowBuffer.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Buffer\StructuredBuffer.h">
+    <ClInclude Include="Framework\Buffer\StructuredBuffer.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Model\ModelType.h">
+    <ClInclude Include="Framework\Model\ModelType.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Model\ModelExporter.h">
+    <ClInclude Include="Framework\Model\ModelExporter.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Scenes\ModelExportScene.h">
@@ -171,22 +171,22 @@
     <ClInclude Include="Scenes\ModelRenderScene.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Model\ModelMesh.h">
+    <ClInclude Include="Framework\Model\ModelMesh.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Model\ModelReader.h">
+    <ClInclude Include="Framework\Model\ModelReader.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Model\Model.h">
+    <ClInclude Include="Framework\Model\Model.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\State\BlendState.h">
+    <ClInclude Include="Framework\State\BlendState.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Model\ModelAnimator.h">
+    <ClInclude Include="Framework\Model\ModelAnimator.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Model\ModelClip.h">
+    <ClInclude Include="Framework\Model\ModelClip.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Scenes\ModelAnimatorScene.h">
@@ -204,25 +204,25 @@
     <ClInclude Include="Object\Landscape\Sky.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\State\DepthStacilState.h">
+    <ClInclude Include="Framework\State\DepthStacilState.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Scenes\CollisionScene.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Collision\Collider.h">
+    <ClInclude Include="Framework\Collision\Collider.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Collision\BoxCollider.h">
+    <ClInclude Include="Framework\Collision\BoxCollider.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Collision\SphereCollider.h">
+    <ClInclude Include="Framework\Collision\SphereCollider.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Collision\CapsuleCollider.h">
+    <ClInclude Include="Framework\Collision\CapsuleCollider.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Math\GameMath.h">
+    <ClInclude Include="Framework\Math\GameMath.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Object\Basic\Quad.h">
@@ -267,7 +267,7 @@
     <ClInclude Include="Scenes\FrustumScene.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Environment\Frustum.h">
+    <ClInclude Include="Framework\Environment\Frustum.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Scenes\InstancingScene.h">
@@ -276,13 +276,13 @@
     <ClInclude Include="Scenes\ModelInstancingScene.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Model\ModelInstancing.h">
+    <ClInclude Include="Framework\Model\ModelInstancing.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Scenes\ModelAnimatorInstancingScene.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Libraries\Framework\Model\ModelAnimatorInstancing.h">
+    <ClInclude Include="Framework\Model\ModelAnimatorInstancing.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Scenes\DefenceScene.h">
@@ -321,6 +321,12 @@
     <ClInclude Include="Object\Model\RockShield.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Scenes\BillboardScene.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Framework\Shader\GeometryShader.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DX3D.cpp">
@@ -335,70 +341,70 @@
     <ClCompile Include="Scenes\TutorialScene.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\System\Device.cpp">
+    <ClCompile Include="Framework\System\Device.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Shader\Shader.cpp">
+    <ClCompile Include="Framework\Shader\Shader.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Shader\VertexShader.cpp">
+    <ClCompile Include="Framework\Shader\VertexShader.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Shader\PixelShader.cpp">
+    <ClCompile Include="Framework\Shader\PixelShader.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Buffer\VertexBuffer.cpp">
+    <ClCompile Include="Framework\Buffer\VertexBuffer.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Buffer\IndexBuffer.cpp">
+    <ClCompile Include="Framework\Buffer\IndexBuffer.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Buffer\ConstBuffer.cpp">
+    <ClCompile Include="Framework\Buffer\ConstBuffer.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Object\ReportCube.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Render\Texture.cpp">
+    <ClCompile Include="Framework\Render\Texture.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Utility\BinaryReader.cpp">
+    <ClCompile Include="Framework\Utility\BinaryReader.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Utility\BinaryWriter.cpp">
+    <ClCompile Include="Framework\Utility\BinaryWriter.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Utility\Font.cpp">
+    <ClCompile Include="Framework\Utility\Font.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Scenes\CubeScene.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Render\Material.cpp">
+    <ClCompile Include="Framework\Render\Material.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Render\Mesh.cpp">
+    <ClCompile Include="Framework\Render\Mesh.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Environment\Environment.cpp">
+    <ClCompile Include="Framework\Environment\Environment.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Object\Basic\Cube.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Math\Transform.cpp">
+    <ClCompile Include="Framework\Math\Transform.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Object\ReportRobot_211201.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\State\SamplerState.cpp">
+    <ClCompile Include="Framework\State\SamplerState.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Scenes\GridScene.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\State\RasterizerState.cpp">
+    <ClCompile Include="Framework\State\RasterizerState.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Object\ReportGrid.cpp">
@@ -407,7 +413,7 @@
     <ClCompile Include="Object\Basic\Grid.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Environment\Camera.cpp">
+    <ClCompile Include="Framework\Environment\Camera.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Scenes\TerrainScene.cpp">
@@ -428,7 +434,7 @@
     <ClCompile Include="Object\Basic\Sphere.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Utility\Utility.cpp">
+    <ClCompile Include="Framework\Utility\Utility.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Scenes\TerrainEditorScene.cpp">
@@ -437,16 +443,16 @@
     <ClCompile Include="Object\Landscape\TerrainEditor.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Shader\ComputeShader.cpp">
+    <ClCompile Include="Framework\Shader\ComputeShader.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Buffer\RowBuffer.cpp">
+    <ClCompile Include="Framework\Buffer\RowBuffer.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Buffer\StructuredBuffer.cpp">
+    <ClCompile Include="Framework\Buffer\StructuredBuffer.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Model\ModelExporter.cpp">
+    <ClCompile Include="Framework\Model\ModelExporter.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Scenes\ModelExportScene.cpp">
@@ -455,22 +461,22 @@
     <ClCompile Include="Scenes\ModelRenderScene.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Model\ModelMesh.cpp">
+    <ClCompile Include="Framework\Model\ModelMesh.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Model\ModelReader.cpp">
+    <ClCompile Include="Framework\Model\ModelReader.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Model\Model.cpp">
+    <ClCompile Include="Framework\Model\Model.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\State\BlendState.cpp">
+    <ClCompile Include="Framework\State\BlendState.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Model\ModelClip.cpp">
+    <ClCompile Include="Framework\Model\ModelClip.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Model\ModelAnimator.cpp">
+    <ClCompile Include="Framework\Model\ModelAnimator.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Scenes\ModelAnimatorScene.cpp">
@@ -488,25 +494,25 @@
     <ClCompile Include="Object\Landscape\Sky.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\State\DepthStacilState.cpp">
+    <ClCompile Include="Framework\State\DepthStacilState.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Scenes\CollisionScene.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Collision\Collider.cpp">
+    <ClCompile Include="Framework\Collision\Collider.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Collision\SphereCollider.cpp">
+    <ClCompile Include="Framework\Collision\SphereCollider.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Collision\BoxCollider.cpp">
+    <ClCompile Include="Framework\Collision\BoxCollider.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Collision\CapsuleCollider.cpp">
+    <ClCompile Include="Framework\Collision\CapsuleCollider.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Math\GameMath.cpp">
+    <ClCompile Include="Framework\Math\GameMath.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Object\Basic\Quad.cpp">
@@ -551,7 +557,7 @@
     <ClCompile Include="Scenes\FrustumScene.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Environment\Frustum.cpp">
+    <ClCompile Include="Framework\Environment\Frustum.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Scenes\InstancingScene.cpp">
@@ -560,13 +566,13 @@
     <ClCompile Include="Scenes\ModelInstancingScene.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Model\ModelInstancing.cpp">
+    <ClCompile Include="Framework\Model\ModelInstancing.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Scenes\ModelAnimatorInstancingScene.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Libraries\Framework\Model\ModelAnimatorInstancing.cpp">
+    <ClCompile Include="Framework\Model\ModelAnimatorInstancing.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Scenes\DefenceScene.cpp">
@@ -603,6 +609,12 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Object\Model\RockShield.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Scenes\BillboardScene.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Framework\Shader\GeometryShader.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
@@ -690,6 +702,7 @@
     <FxCompile Include="Shaders\Bar.hlsl" />
     <FxCompile Include="Shaders\Instancing.hlsl" />
     <FxCompile Include="Shaders\AnimatorInstancing.hlsl" />
+    <FxCompile Include="Shaders\Geometry\Billboard.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\Header.hlsli" />
