--- a/220118_CurrentProject/DX3D/DX3D.vcxproj.filters
+++ b/220118_CurrentProject/DX3D/DX3D.vcxproj.filters
@@ -66,7 +66,7 @@
     <ClInclude Include="Framework\Buffer\GlobalBuffer.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Object\ReportCube.h">
+    <ClInclude Include="Object\Report\ReportCube.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Framework\Render\Texture.h">
@@ -102,7 +102,7 @@
     <ClInclude Include="Framework\Math\Transform.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Object\ReportRobot_211201.h">
+    <ClInclude Include="Object\Report\ReportRobot_211201.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Framework\State\SamplerState.h">
@@ -114,13 +114,13 @@
     <ClInclude Include="Scenes\GridScene.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Object\ReportGrid.h">
+    <ClInclude Include="Object\Report\ReportGrid.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Object\Basic\Grid.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Object\ReportCamera_211205.h">
+    <ClInclude Include="Object\Report\ReportCamera_211205.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Framework\Environment\Camera.h">
@@ -243,7 +243,7 @@
     <ClInclude Include="Scenes\ReportScene.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="Object\SKillBall.h">
+    <ClInclude Include="Object\Report\SKillBall.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Scenes\AstarScene.h">
@@ -327,6 +327,15 @@
     <ClInclude Include="Framework\Shader\GeometryShader.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Scenes\ParticleScene.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Object\Particle\Particle.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Object\Particle\Spark.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DX3D.cpp">
@@ -362,7 +371,7 @@
     <ClCompile Include="Framework\Buffer\ConstBuffer.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Object\ReportCube.cpp">
+    <ClCompile Include="Object\Report\ReportCube.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Framework\Render\Texture.cpp">
@@ -395,7 +404,7 @@
     <ClCompile Include="Framework\Math\Transform.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Object\ReportRobot_211201.cpp">
+    <ClCompile Include="Object\Report\ReportRobot_211201.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Framework\State\SamplerState.cpp">
@@ -407,7 +416,7 @@
     <ClCompile Include="Framework\State\RasterizerState.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Object\ReportGrid.cpp">
+    <ClCompile Include="Object\Report\ReportGrid.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Object\Basic\Grid.cpp">
@@ -419,7 +428,7 @@
     <ClCompile Include="Scenes\TerrainScene.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Object\ReportCamera_211205.cpp">
+    <ClCompile Include="Object\Report\ReportCamera_211205.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Object\Landscape\Terrain.cpp">
@@ -533,7 +542,7 @@
     <ClCompile Include="Scenes\ReportScene.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Object\SKillBall.cpp">
+    <ClCompile Include="Object\Report\SKillBall.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Scenes\AstarScene.cpp">
@@ -615,6 +624,15 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Framework\Shader\GeometryShader.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Scenes\ParticleScene.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Object\Particle\Particle.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Object\Particle\Spark.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
@@ -703,6 +721,7 @@
     <FxCompile Include="Shaders\Instancing.hlsl" />
     <FxCompile Include="Shaders\AnimatorInstancing.hlsl" />
     <FxCompile Include="Shaders\Geometry\Billboard.hlsl" />
+    <FxCompile Include="Shaders\Geometry\Spark.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\Header.hlsli" />
