--- a/220118_CurrentProject/DX3D/imgui.ini
+++ b/220118_CurrentProject/DX3D/imgui.ini
@@ -14,9 +14,9 @@ Size=674,451
 Collapsed=0
 
 [Window][Inspector]
-Pos=925,15
-Size=419,597
-Collapsed=1
+Pos=782,12
+Size=510,582
+Collapsed=0
 
 [Window][SaveFile##SaveKey]
 Pos=133,140
@@ -69,12 +69,12 @@ Size=699,131
 Collapsed=0
 
 [Window][SaveHeightMap##SaveHeightMap]
-Pos=120,139
+Pos=120,140
 Size=699,422
 Collapsed=0
 
 [Window][LoadHeightMap##LoadHeightMap]
-Pos=61,67
+Pos=60,68
 Size=872,458
 Collapsed=0
 
@@ -998,6 +998,98 @@ RefScale=13
 Column 0  Sort=0v
 
 [Table][0x3BF85605,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x55448F23,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x93780C93,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x47E8E5A3,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x1422B0AE,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x76F4EC58,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x0C958B66,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x5F5FDE6B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x019FC468,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xCF173B5B,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x9CDD6E56,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x940DD883,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xC7C78D8E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x05E09384,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x562AC689,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x34FC9A7F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF7A0E679,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x946F3BF6,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x996574F8,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x5C2532E1,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF5FE8568,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xA634D065,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xF8F4CA66,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x234CF8D4,4]
 RefScale=13
 Column 0  Sort=0v
 
