--- a/220118_CurrentProject/DX3D/DX3D.vcxproj
+++ b/220118_CurrentProject/DX3D/DX3D.vcxproj
@@ -170,6 +170,7 @@
     <ClInclude Include="Framework\Environment\Environment.h" />
     <ClInclude Include="Framework\Environment\Frustum.h" />
     <ClInclude Include="Framework\Math\GameMath.h" />
+    <ClInclude Include="Framework\Math\Vector2.h" />
     <ClInclude Include="Framework\Model\Model.h" />
     <ClInclude Include="Framework\Model\ModelAnimator.h" />
     <ClInclude Include="Framework\Model\ModelAnimatorInstancing.h" />
@@ -236,6 +237,7 @@
     <ClInclude Include="Object\Report\SKillBall.h" />
     <ClInclude Include="Object\UI\Bar.h" />
     <ClInclude Include="Object\Particle\Particle.h" />
+    <ClInclude Include="Object\UI\UIPanel.h" />
     <ClInclude Include="Programe\Program.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Scenes\AstarScene.h" />
@@ -260,6 +262,7 @@
     <ClInclude Include="Scenes\SphereScene.h" />
     <ClInclude Include="Scenes\TerrainEditorScene.h" />
     <ClInclude Include="Scenes\TerrainScene.h" />
+    <ClInclude Include="Scenes\TestScene.h" />
     <ClInclude Include="Scenes\TutorialScene.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -285,6 +288,7 @@
     <ClCompile Include="Framework\Environment\Frustum.cpp" />
     <ClCompile Include="Framework\Math\GameMath.cpp" />
     <ClCompile Include="Framework\Math\Transform.cpp" />
+    <ClCompile Include="Framework\Math\Vector2.cpp" />
     <ClCompile Include="Framework\Model\Model.cpp" />
     <ClCompile Include="Framework\Model\ModelAnimator.cpp" />
     <ClCompile Include="Framework\Model\ModelAnimatorInstancing.cpp" />
@@ -347,6 +351,7 @@
     <ClCompile Include="Object\Report\ReportRobot_211201.cpp" />
     <ClCompile Include="Object\Report\SKillBall.cpp" />
     <ClCompile Include="Object\UI\Bar.cpp" />
+    <ClCompile Include="Object\UI\UIPanel.cpp" />
     <ClCompile Include="Programe\Program.cpp" />
     <ClCompile Include="Scenes\AstarScene.cpp" />
     <ClCompile Include="Scenes\BillboardScene.cpp" />
@@ -369,6 +374,7 @@
     <ClCompile Include="Scenes\SphereScene.cpp" />
     <ClCompile Include="Scenes\TerrainEditorScene.cpp" />
     <ClCompile Include="Scenes\TerrainScene.cpp" />
+    <ClCompile Include="Scenes\TestScene.cpp" />
     <ClCompile Include="Scenes\TutorialScene.cpp" />
   </ItemGroup>
   <ItemGroup>
