--- a/220118_CurrentProject/DX3D/imgui.ini
+++ b/220118_CurrentProject/DX3D/imgui.ini
@@ -14,9 +14,9 @@ Size=674,451
 Collapsed=0
 
 [Window][Inspector]
-Pos=854,34
+Pos=882,99
 Size=394,589
-Collapsed=0
+Collapsed=1
 
 [Window][SaveFile##SaveKey]
 Pos=133,140
@@ -1090,6 +1090,18 @@ RefScale=13
 Column 0  Sort=0v
 
 [Table][0x234CF8D4,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x6D474B29,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x3E8D1E24,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x4DBB7C5A,4]
 RefScale=13
 Column 0  Sort=0v
 
