--- a/220118_CurrentProject/DX3D/DX3D.vcxproj.filters
+++ b/220118_CurrentProject/DX3D/DX3D.vcxproj.filters
@@ -381,6 +381,9 @@
     <ClInclude Include="Object\Manager\ParticleManager.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Object\Manager\Audio.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DX3D.cpp">
@@ -723,6 +726,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Object\Manager\ParticleManager.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Object\Manager\Audio.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
